[gd_scene load_steps=11 format=3 uid="uid://ck350dyu7jhq1"]

[ext_resource type="Script" uid="uid://do0scnp22kly2" path="res://Levels/level_manager.gd" id="1_0v36c"]
[ext_resource type="Texture2D" uid="uid://nygc5koouovv" path="res://Background.svg" id="2_6cr4x"]
[ext_resource type="FontFile" uid="uid://c2j1n75n5m4wk" path="res://Fonts/BRLNSDB.TTF" id="3_tbnkl"]
[ext_resource type="FontFile" uid="uid://cew2jv4a2p2sd" path="res://Fonts/BRLNSB.TTF" id="4_drp08"]
[ext_resource type="Texture2D" uid="uid://crlbunc4a8gob" path="res://Levels/TestLevel2/test_level_2.png" id="5_p5xqa"]
[ext_resource type="PackedScene" uid="uid://ddncewppoowpx" path="res://MapElements/SolidElements/solid_element.tscn" id="5_pjiyk"]
[ext_resource type="Script" uid="uid://bgao2kkf8mvx0" path="res://Levels/map.gd" id="6_0bnua"]
[ext_resource type="PackedScene" uid="uid://dadpidbo1my0e" path="res://Snake/Head/snake_head.tscn" id="8_idwsd"]
[ext_resource type="PackedScene" uid="uid://dobkpr5ucg8no" path="res://Snake/Body/snake_body.tscn" id="9_e4op4"]
[ext_resource type="PackedScene" uid="uid://c4ocnud8k5oe4" path="res://Snake/Tail/snake_tail.tscn" id="10_jydd7"]

[node name="Level" type="Node2D"]
script = ExtResource("1_0v36c")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-260, 1060)
scale = Vector2(5.877, 5.482)
texture = ExtResource("2_6cr4x")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(40, 780)
zoom = Vector2(0.525, 0.525)

[node name="FruitsLeftToWin" type="Label" parent="."]
offset_left = -1620.0
offset_top = 420.0
offset_right = -142.0
offset_bottom = 643.0
theme_override_fonts/font = ExtResource("3_tbnkl")
theme_override_font_sizes/font_size = 196
text = "Fruits left to win:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FruitsLeftNumberLabel" type="Label" parent="."]
offset_left = -1500.0
offset_top = 540.0
offset_right = -345.0
offset_bottom = 1208.0
theme_override_fonts/font = ExtResource("3_tbnkl")
theme_override_font_sizes/font_size = 591
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YOU WIN!" type="Label" parent="."]
visible = false
offset_left = -1660.0
offset_top = 680.0
offset_right = -154.0
offset_bottom = 1883.0
theme_override_colors/font_color = Color(0.960667, 1, 0.41, 1)
theme_override_fonts/font = ExtResource("4_drp08")
theme_override_font_sizes/font_size = 321
text = "YOU
WIN!
"
horizontal_alignment = 1

[node name="Map" type="Sprite2D" parent="."]
texture = ExtResource("5_p5xqa")
offset = Vector2(760, 760)
script = ExtResource("6_0bnua")
grid_size = Vector2i(20, 20)
starting_position = Vector2(10, 12)

[node name="SolidElements" type="Node2D" parent="Map"]
position = Vector2(400, 400)

[node name="SolidElementArea" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(0, 80)

[node name="SolidElementArea2" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(80, 80)

[node name="SolidElementArea3" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(80, 160)

[node name="SolidElementArea4" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-1.78814e-07, 160)

[node name="SolidElementArea5" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-1.78814e-07, 240)

[node name="SolidElementArea6" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-320, 320)

[node name="SolidElementArea7" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 320)

[node name="SolidElementArea8" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 400)

[node name="SolidElementArea9" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-320, 400)

[node name="SolidElementArea10" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 240)

[node name="SolidElementArea11" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 160)

[node name="SolidElementArea12" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 80)

[node name="SolidElementArea13" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 3.57628e-06)

[node name="SolidElementArea14" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, -80)

[node name="SolidElementArea15" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, -160)

[node name="SolidElementArea16" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, -240)

[node name="SolidElementArea17" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, -320)

[node name="SolidElementArea18" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, -400)

[node name="SolidElementArea25" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 880)

[node name="SolidElementArea26" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 960)

[node name="SolidElementArea27" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 1040)

[node name="SolidElementArea28" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 1120)

[node name="SolidElementArea29" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-320, 1120)

[node name="SolidElementArea30" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-240, 1120)

[node name="SolidElementArea20" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 800)

[node name="SolidElementArea21" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 720)

[node name="SolidElementArea22" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 640)

[node name="SolidElementArea23" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 560)

[node name="SolidElementArea24" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-400, 480)

[node name="SolidElementArea31" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-160, 1120)

[node name="SolidElementArea32" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-80, 1120)

[node name="SolidElementArea33" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-1.78814e-07, 1120)

[node name="SolidElementArea34" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(80, 1120)

[node name="SolidElementArea35" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(160, 1120)

[node name="SolidElementArea36" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(240, 1120)

[node name="SolidElementArea37" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(320, 1120)

[node name="SolidElementArea38" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(400, 1120)

[node name="SolidElementArea39" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(480, 1120)

[node name="SolidElementArea40" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(560, 1120)

[node name="SolidElementArea41" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(640, 1120)

[node name="SolidElementArea42" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(720, 1120)

[node name="SolidElementArea43" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(800, 1120)

[node name="SolidElementArea44" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(880, 1120)

[node name="SolidElementArea45" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(960, 1120)

[node name="SolidElementArea46" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(960, 640)

[node name="SolidElementArea47" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1040, 640)

[node name="SolidElementArea48" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 640)

[node name="SolidElementArea49" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(720, 640)

[node name="SolidElementArea50" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(800, 640)

[node name="SolidElementArea51" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(880, 640)

[node name="SolidElementArea52" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(80, 640)

[node name="SolidElementArea53" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(160, 640)

[node name="SolidElementArea54" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(240, 640)

[node name="SolidElementArea55" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-160, 640)

[node name="SolidElementArea56" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-80, 640)

[node name="SolidElementArea118" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1119.31, 236.364)

[node name="SolidElementArea119" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(639.307, 636.364)

[node name="SolidElementArea57" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-1.78814e-07, 640)

[node name="SolidElementArea58" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-1.78814e-07, 880)

[node name="SolidElementArea59" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(80, 880)

[node name="SolidElementArea60" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(80, 960)

[node name="SolidElementArea61" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-1.78814e-07, 960)

[node name="SolidElementArea62" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(800, 880)

[node name="SolidElementArea63" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(880, 880)

[node name="SolidElementArea64" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(880, 960)

[node name="SolidElementArea65" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(800, 960)

[node name="SolidElementArea66" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(320, -400)

[node name="SolidElementArea67" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(400, -400)

[node name="SolidElementArea68" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(400, -320)

[node name="SolidElementArea69" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(320, -320)

[node name="SolidElementArea70" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1040, 320)

[node name="SolidElementArea71" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 320)

[node name="SolidElementArea72" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 400)

[node name="SolidElementArea73" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1040, 400)

[node name="SolidElementArea74" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(400, 1040)

[node name="SolidElementArea75" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(320, 1040)

[node name="SolidElementArea76" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-240, -400)

[node name="SolidElementArea77" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-320, -400)

[node name="SolidElementArea78" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-80, -400)

[node name="SolidElementArea79" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-160, -400)

[node name="SolidElementArea80" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(80, -400)

[node name="SolidElementArea81" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-1.78814e-07, -400)

[node name="SolidElementArea82" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(240, -400)

[node name="SolidElementArea83" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(160, -400)

[node name="SolidElementArea84" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(560, -400)

[node name="SolidElementArea85" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(480, -400)

[node name="SolidElementArea86" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(720, -400)

[node name="SolidElementArea87" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(640, -400)

[node name="SolidElementArea88" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(880, -400)

[node name="SolidElementArea89" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(800, -400)

[node name="SolidElementArea90" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1040, -400)

[node name="SolidElementArea92" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, -400)

[node name="SolidElementArea93" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, -320)

[node name="SolidElementArea94" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, -240)

[node name="SolidElementArea95" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, -160)

[node name="SolidElementArea96" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, -80)

[node name="SolidElementArea97" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 3.57628e-06)

[node name="SolidElementArea98" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 80)

[node name="SolidElementArea99" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 160)

[node name="SolidElementArea100" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 160)

[node name="SolidElementArea91" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(960, -400)

[node name="SolidElementArea101" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 480)

[node name="SolidElementArea102" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 560)

[node name="SolidElementArea103" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 720)

[node name="SolidElementArea104" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 800)

[node name="SolidElementArea105" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 880)

[node name="SolidElementArea106" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 960)

[node name="SolidElementArea107" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 1040)

[node name="SolidElementArea108" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1120, 1120)

[node name="SolidElementArea109" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(1040, 1120)

[node name="SolidElementArea110" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(800, 1040)

[node name="SolidElementArea111" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-1.78814e-07, 1040)

[node name="SolidElementArea112" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-160, -160)

[node name="SolidElementArea113" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-80, -160)

[node name="SolidElementArea114" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(-1.78814e-07, -160)

[node name="SolidElementArea115" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(80, -160)

[node name="SolidElementArea116" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(160, -160)

[node name="SolidElementArea117" parent="Map/SolidElements" instance=ExtResource("5_pjiyk")]
position = Vector2(240, -160)

[node name="SnakeHead" parent="Map" instance=ExtResource("8_idwsd")]

[node name="SnakeBody" parent="Map" instance=ExtResource("9_e4op4")]

[node name="SnakeBody2" parent="Map" instance=ExtResource("9_e4op4")]

[node name="SnakeBody3" parent="Map" instance=ExtResource("9_e4op4")]

[node name="SnakeBody4" parent="Map" instance=ExtResource("9_e4op4")]

[node name="SnakeTail" parent="Map" instance=ExtResource("10_jydd7")]
